--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
   },
   "type": "module",
   "devDependencies": {
+    "@types/babel__core": "^7.20.0",
+    "@types/debug": "^4.1.7",
     "solid-start-node": "^0.2.19",
     "typescript": "^4.9.4",
-    "@types/debug": "^4.1.7",
-    "@types/babel__core": "^7.20.0",
-    "vite": "^4.1.4",
-    "vite-plugin-solid-styled": "^0.8.1"
+    "vite": "^4.1.4"
   },
   "dependencies": {
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.8.2",
     "solid-js": "^1.7.2",
     "solid-start": "^0.2.26",
-    "solid-styled": "^0.8.1",
+    "solid-styled-components": "^0.28.5",
     "undici": "^5.15.1"
   },
   "engines": {
