--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/babel__core": "^7.20.0",
     "@types/debug": "^4.1.7",
     "solid-start-node": "^0.2.19",
+    "solid-start-vercel": "^0.2.26",
     "typescript": "^4.9.4",
     "vite": "^4.1.4"
   },
