--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.8.2",
+    "@vercel/analytics": "^1.0.1",
     "solid-js": "^1.7.2",
     "solid-start": "^0.2.26",
     "solid-styled-components": "^0.28.5",
